# quetzal

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Cargo.toml  LICENSE-MIT  LICENSE.txt  README.md  TODO.md  build.rs  compile_commands.json
.cache/clangd/index/: data-structures.hpp.7599913856077CF8.idx  lexer.hpp.7AA520D5C38E0192.idx  quetzal.cpp.349C78499F046F64.idx
.vim/: coc-settings.json
benches/: front_end_benchmark.rs
docs/: grammar.txt  syntax.ebnf
lib/: data-structures.hpp
lib/qtz/: init.qmod  qstdio.qtz
qtzfiles/: fibonacci.qz  helloworld.qz  proto.qz  sum_input.qz  toylexer.qz  toylexer.qz.lexed
src/: codegen.rs  common.cpp  error.rs  lexer.cpp  lexer.rs  lib.rs  parser.cpp  punycode.rs  quetzal.cpp  source.qtz  token.rs
src-cpp/: llvm_bridge.cpp  llvm_bridge.hpp
src/include/: ast-builder.hpp  common.hpp  error.hpp  interpreter.hpp  lexer.hpp  parser.hpp
src/parser/: ast.rs  mod.rs  types.rs
