[package]
name = "quetzal-lang"
version = "0.0.1"
authors = ["Ezra Alvarion <ezraalvarion71@gmail.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"
keywords = ["quetzal", "quetzal-lang", "compiler" ,"command-line utility"]
categories = ["compilers", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libquetzal"

[[bin]]
name = "quetzalc"

[[bench]]
name = "front_end_benchmark"
harness = false

[[test]]
name = "quetzalintegration"

[dependencies]
clap = "4"
log = "0.4"
cxx = "1.0"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
cxx-build = "1.0"
